log/build_2024-12-13_15-56-23/master/stderr.log
/usr/lib/python3/dist-packages/setuptools/dist.py:723: UserWarning: Usage of dash-separated 'script-dir' will not be supported in future versions. Please use the underscore name 'script_dir' instead
  warnings.warn(
  File "/home/pimpmobile/ros2_ws/install/master/lib/python3.10/site-packages/master/master_code.py", line 327
    (self.)
          ^
SyntaxError: f-string: invalid syntax

